kubernetes/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: welcome-app-go
spec:
  selector:
    app: welcome-app-go
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
