kubernetes/app-ingress-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: welcome-app-go
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: "letsencrypt-staging"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - local.host
    secretName: welcome-app-tls
  rules:
    - host: local.host
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: welcome-app-go
                port:
                  number: 80
