kubernetes/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: welcome-app-go
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: local.host
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: welcome-app-go
                port:
                  number: 80
